Automatically backed up by Learn

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <html lang="en">
   <head>
     <title> test </title>
-    <link 
+    <link rel="stylesheet" type="text/css" href="style.css">
   </head>
   <body>
     
